<resources>
    <string name="app_name">Meditradent</string>
    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>
    <string name="create_user">Create User</string>
    <string name="continue_txt">Continue</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="setting_chart">Setting Chart</string>
    <string name="chart_interval">Chart interval</string>
    <string name="permission_bluetooth">To use this application, you need to grant permission to access bluetooth!</string>
    <string name="permission_create">To use this application, you need to grant permission to access read and write!</string>


</resources>