<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="48dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_chart"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtIntervalChart"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:hint="@string/chart_interval"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:paddingEnd="8dp"
            android:background="@drawable/bg_edt"
            android:layout_height="wrap_content"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="28dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/save"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>