<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColorPages"
    tools:context=".ui.createUser.CreateActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_user"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtName"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:hint="@string/enter_user_name"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:paddingStart="8dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingEnd="8dp"
                android:background="@drawable/bg_edt"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/continue_txt"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>